--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 export(cache_sodium_key)
 export(cache_use_sodium)
 export(read_sodium)
-export(write_sodium)
+export(sodium_get_key)
+export(sodium_get_key_or_ask)
+export(sodium_set_key)
 import(cache)
 importFrom(fs,path)
 importFrom(fs,path_ext_set)
